--- a/Products.html
+++ b/Products.html
@@ -10,7 +10,7 @@
 		/>
 		<link rel="stylesheet" href="./assets/style.css" />
 		<link rel="shortcut icon" type="images/png" href="./img/Dash.Designw.png">
-		<title>Dash Design | Products>/title>
+		<title>Dash Design | Products</title>
 	</head>
 	<body>
 		<header>
