--- a/Products.html
+++ b/Products.html
@@ -42,10 +42,13 @@
         </header>
 
 					<!-- Gallery  -->
-						<div class="gallery">
+				<section></section>		
+					<div class="gallery">
 							<div id="welcome text" align="center" >
 								<br><u><h1>Welcome</h1></u><br><h2>to the our Products section!</h2>
 								</div>
+								<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
+									if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.</h3>
 								<br><u><h1>Logos</h1></u><br>
 							<article class="from-left">
 								<a class="image fit"><img src="img/tk.png" title="Toprak Tommy Kilic" alt="" align="left" height="226" /></a>
@@ -70,9 +73,7 @@
 							<article class="from-left">
 								<a href="https://discord.gg/JuhYrx9" class="image fit"><img src="img/discord roleplay template.png" title="Roleplay server" alt="" height="226" align="left"/></a>
 							</article>
-							<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
-							if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.</h3>
-							
+				</section>				
 							<footer id="footer">
 								<p class="copyright">&copy; Dash Design.</p>
 							</footer>
