--- a/Products.html
+++ b/Products.html
@@ -48,7 +48,7 @@
 								<br><u><h1>Welcome</h1></u><br><h2>to the our Products section!</h2>
 								</div>
 								<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
-									if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.</h3>
+									if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.<br>If you click on the images on the "Websites", "Discord Servers" categories it will redirect you to their demos.</h3>
 								<br><u><h1>Logos</h1></u><br>
 							<article class="from-left">
 								<a class="image fit"><img src="img/tk.png" title="Toprak Tommy Kilic" alt="" align="left" height="226" /></a>
