--- a/Products.html
+++ b/Products.html
@@ -10,7 +10,7 @@
 		/>
 		<link rel="stylesheet" href="./assets/style.css" />
 		<link rel="shortcut icon" type="images/png" href="./img/Dash.Designw.png">
-		<title>Dash Design | Products</title>
+		<title>Dash Design | Products></title>
 	</head>
 	<body>
 		<header>
@@ -47,8 +47,6 @@
 							<div id="welcome text" align="center" >
 								<br><u><h1>Welcome</h1></u><br><h2>to the our Products section!</h2>
 								</div>
-								<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
-									If you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.<br><br>If you click on the images on the "Websites", "Discord Servers" categories it will redirect you to their demos.</h3>
 								<br><u><h1>Logos</h1></u><br>
 							<article class="from-left">
 								<a class="image fit"><img src="img/tk.png" title="Toprak Tommy Kilic" alt="" align="left" height="226" /></a>
@@ -73,6 +71,8 @@
 							<article class="from-left">
 								<a href="https://discord.gg/JuhYrx9" class="image fit"><img src="img/discord roleplay template.png" title="Roleplay server" alt="" height="226" align="left"/></a>
 							</article>
+							<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
+							if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.<br><br>If you click on the images that are on the "Websites", "Discord categories" it will redirect you to their demos.</h3>
 				</section>				
 							<footer id="footer">
 								<p class="copyright">&copy; Dash Design.</p>
