--- a/Products.html
+++ b/Products.html
@@ -10,7 +10,7 @@
 		/>
 		<link rel="stylesheet" href="./assets/style.css" />
 		<link rel="shortcut icon" type="images/png" href="./img/Dash.Designw.png">
-		<title>Dash Design | Products></title>
+		<title>Dash Design | Products</title>
 	</head>
 	<body>
 		<header>
@@ -40,6 +40,7 @@
 				</nav>
 			</div>
         </header>
+
 
 					<!-- Gallery  -->
 				<section></section>		
@@ -72,8 +73,8 @@
 								<a href="https://discord.gg/JuhYrx9" class="image fit"><img src="img/discord roleplay template.png" title="Roleplay server" alt="" height="226" align="left"/></a>
 							</article>
 							<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
-							if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.<br><br>If you click on the images that are on the "Websites", "Discord categories" it will redirect you to their demos.</h3>
-				</section>				
+							if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.</h3>
+				</section>					
 							<footer id="footer">
 								<p class="copyright">&copy; Dash Design.</p>
 							</footer>
