--- a/Products.html
+++ b/Products.html
@@ -48,24 +48,24 @@
 							<div id="welcome text" align="center" >
 								<br><u><h1>Welcome</h1></u><br><h2>to the our Products section!</h2>
 								</div>
-								<br><u><h1>Logos</h1></u><br>
+								<br><br><u><h1>Logos</h1></u><br>
 							<article class="from-left">
 								<a class="image fit"><img src="img/tk.png" title="Toprak Tommy Kilic" alt="" align="left" height="226" /></a>
 								<a class="image fit"><img src="img/Gcrosshair.png" title="Gioo Crosshair" alt="" align="left" height="226" /></a>
 								<a class="image fit"><img src="img/dd2.png" title="DuMy Debo" alt="" align="left" height="226" /></a>
 								<a class="image fit"><img src="img/Muxhzlogo.png" title="Muxhz" alt="" height="226"/></a>
 							</article>
-							<br><u><h1>Thumbnails</h1></u><br>
+							<br><br><u><h1>Thumbnails</h1></u><br>
 							<article class="from-left">
 								<a class="image fit"><img src="img/thumbnail 1.png" title="Rocket League thumbnail" alt="" align="left" height="226"/></a>
 								<a class="image fit"><img src="img/thumbnail 2.png" title="Arma 3 thumbnail" alt="" align="right"height="226"/></a>
 							</article>
-							<br><u><h1>Websites</h1></u><br>
+							<br><br><u><h1>Websites</h1></u><br>
 							<article class="from-left">
 								<a href="https://paic26.github.io/GoddzeSport/" class="image fit"><img src="img/GoddzeSports.png" title="GoddzeSports" alt=""height="226" align="left"/></a>
 								<a href="https://paic26.github.io/WebsiteDemo/Main.html" class="image fit"><img src="img/Modern Website.png" title="Modern Website demo" alt="" height="226" align="left"/></a>
 							</article>
-								<br><u><h1>Discord Servers</h1></u><br>
+								<br><br><u><h1>Discord Servers</h1></u><br>
 							<article class="from-left">
 								<a href="https://discord.gg/jvZRYTz" class="image fit"><img src="img/discord comunity template.png" title="Comunity server" alt=""height="226" align="left/></a>
 							</article>
