--- a/Products.html
+++ b/Products.html
@@ -73,7 +73,7 @@
 								<a href="https://discord.gg/JuhYrx9" class="image fit"><img src="img/discord roleplay template.png" title="Roleplay server" alt="" height="226" align="left"/></a>
 							</article>
 							<br><br><u><h2>Information</h2></u><br><h3>Not all products are represented on the images above.<br>
-							if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.</h3>
+							if you want to check out more of our products <a href="https://discord.gg/akwGkNh">Join Us</a>.<br><br>If you click on the images that are on the "Websites", "Discord categories" it will redirect you to their demos.</h3>
 				</section>					
 							<footer id="footer">
 								<p class="copyright">&copy; Dash Design.</p>
